--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,20 +24,21 @@ spring.messages.encoding=UTF-8
 server.tomcat.uri-encoding=UTF-8
 server.http2.enabled=true
 server.port=8080
-spring.artemis.host=10.2.64.12
+spring.artemis.host=192.168.0.102
 
 
 #imageSize
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+
 #mail configuration
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=tars1603@gmail.com
-#spring.mail.password=1602arstest1603
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=lilith.mkrtchyan16@gmail.com
+spring.mail.password=MLKAMGmail8$
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 #jwt
 jwt.secret=QWERtyuyui
